--- a/boards/samd21_xplained_pro.yml
+++ b/boards/samd21_xplained_pro.yml
@@ -35,7 +35,7 @@ interfaces:
     options:
       - name: USB
         description: Target USB configuration
-        dependencies: [drv_usbfs_v1]
+        dependencies: [[drv_usbfs_v1]]
         pinctrl:
           usb_p:
             pinId: PA25
@@ -82,6 +82,7 @@ interfaces:
     options:
       - name: Virtual COM Port interface
         description: Serial Debug Console
+        dependencies: [[sys_console, sercom3]]
         pinctrl:
           tx:
             pinId: PA22
