--- a/clickBoards/eeprom_4_click.yml
+++ b/clickBoards/eeprom_4_click.yml
@@ -6,7 +6,7 @@ description: >
   density of 2 Mbits
 documentation: https://www.mikroe.com/eeprom-4-click
 compatible: mikrobus
-dependencies: [["drv_at25", "spi"]]
+dependencies: [[drv_at25, spi]]
 supported:
   rst:
     name: EEPROM4_WP
