MH3-95596: Add support to MPUs

--- a/clickBoards/eeprom_4_click.yml
+++ b/clickBoards/eeprom_4_click.yml
@@ -20,7 +20,7 @@ supported:
     mosi:
       name: EEPROM4_MOSI
   pwm:
-    name: EEPROM4_HLD
+    name: EEPROM4_HOLD
     function: GPIO
     direction: out
     latch: low
