MH3-99523: Some Pin settings are not updated correctly when connecting click board. Modify debug lines. Solve mistake in PIC32CXMTG EK description file. Remove unnecessary lines from python scripts.

--- a/boards/pic32cxmtg_ek.yml
+++ b/boards/pic32cxmtg_ek.yml
@@ -240,7 +240,7 @@ connectors:
         name: Xplained_Pro_IRQ
         function: GPIO
         direction: in
-        latch: low
+        pull down: True
         interrupt: falling edge
       gpio ss:
         pinId: PB15
